 - [web] fixed automatic refresh of calendar view
 - [web] respect SOGoSearchMinimumWordLength in contacts list editor
 - [web] improved memory usage when importing very large address books
 - [web] fixed progress indicator while importing cards or events and tasks
 - [web] improved detection of changes in CKEditor (#3839)
 - [web] fixed vCard generation for tags with no type (#3826)
 - [eas] improve handling of email folders without a parent
 - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
 - [core] sogo-tool manage-eas now works with single store mode


3.2.0 (2016-10-03)
------------------

New features
 - [web] added IMAP folder subscriptions management (#255)
 - [web] keyboard hotkeys (#1711, #1467, #3817)
 - [eas] initial support for server-side mailbox search operations

Enhancements
 - [web] don't allow a recurrence rule to end before the first occurrence
 - [web] updated Angular Material to version 1.1.1
 - [web] show user's name upon successful login
 - [web] inserted unseen messages count and mailbox name in browser's window title
 - [web] disable JavaScript theme generation when SOGoUIxDebugEnabled is set to NO
 - [web] added Serbian (sr) translation - thanks to Bogdanović Bojan
 - [web] added sort by arrival date in Mail module (#708)
 - [web] restored "now" line in Calendar module
 - [web] updated CKEditor to version 4.5.11
 - [web] allow custom email address to be one of the user's profile (#3551)
 - [eas] propagate message submission errors to EAS clients (#3774) 

Bug fixes
 - [eas] properly generate the BusyStatus for normal events
 - [eas] properly escape all email and address fields
 - [eas] properly generate yearly rrule
 - [eas] make sure we don't sleep for too long when EAS processes need interruption
 - [eas] fixed recurring events with timezones for EAS (#3822)
 - [web] restored functionality to save unknown recipient emails to address book on send