@@ -13,6 +13,7 @@ Bug fixes
  - [web] fixed progress indicator while importing cards or events and tasks
  - [web] improved detection of changes in CKEditor (#3839)
  - [web] fixed vCard generation for tags with no type (#3826)
+ - [web] only show the organizer field of an IMIP REPLY if one is defined
  - [eas] improve handling of email folders without a parent
  - [core] only consider SMTP addresses for AD's proxyAddresses (#3842)
  - [core] sogo-tool manage-eas now works with single store mode
